--- a/src/componets/Items.css
+++ b/src/componets/Items.css
@@ -4,7 +4,7 @@
   display: flex;
   width: 100%;
   align-items: center;
-  overflow: hidden; 
+  /* overflow: hidden;  */
   position: absolute;
 
 }
